2004-12-08  Matthias Clasen  <mclasen@redhat.com>

	Fix #111031, reported by Padraig O'Briain:
	
	* gtk/gtktextlayout.h: 
	* gtk/gtktextlayout.c (gtk_text_layout_get_iter_at_position): 
	Add a variant of gtk_text_layout_get_iter_at_pixel() which
	returns the character at the position, not the closest
	cursor position.

	* gtk/gtktextview.h: 
	* gtk/gtktextview.c (gtk_text_view_get_iter_at_position): 
	Add a variant of gtk_text_view_get_iter_at_location() which
	returns the character at the position, not the closest
	cursor position.

2004-12-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccelmap.c (internal_change_entry): Remove all 
	entries for the same key, not just the first one.  (#159498, 
	Christian Persch)

2004-12-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (_gtk_tree_view_column_start_drag): Use
	button->event_window for the fake leave event, otherwise
	the button ignores it.  

2004-12-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_rows_reordered): Make this
	work, no need to invert the array. 

	* gtk/gtkliststore.c (gtk_list_store_sort_iter_changed): Emit
	rows_reordered if the row has been moved.  (#160063)

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_button_event): 
	Don't mess up the column header state if the button release
	event is missed.  (#159640)

2004-12-07  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk/gtkcellview.c: (gtk_cell_view_set_background_color):

	Fix a typo in last commit

2004-12-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellview.c (gtk_cell_view_set_background_color): Queue
	a redraw.  (#160679, Damon Chaplin)

2004-12-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_button_event): 
	Don't mess up the column header state if the button release
	event is missed.  (#159640)

	* docs/tools/widgets.h (enum): Add an ASIS widget size.

	* docs/tools/widgets.c (get_all_widgets): Add file chooser,