@@ -1,3 +1,10 @@
+2004-12-08  Federico Mena Quintero  <federico@ximian.com>
+
+	Merged from gtk-2-4:
+
+	* gtk/gtkfilechooserdefault.c (pending_op_process): Center the
+	selected row so that it's easily visible.
+
 2004-12-08  Matthias Clasen  <mclasen@redhat.com>
 
 	Fix #111031, reported by Padraig O'Briain:
